--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "chartjs": "^0.3.24",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
